--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT = 3000
 Url = "mongodb://localhost:27017/koniat"
 JWT_SECRET = Sanjib_sourav
+COOKIE_SECRET = Sanjib_sourav
+JWT_ExpiresIn = 1h
+COOKIE_NAME  = token
+ACCESS_TOKEN_PRIVATE_KEY = Sanjib_sourav
+REFRESH_TOKEN_PRIVATE_KEY = Sanjib_sourav
