--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ ACCESS_TOKEN_COOKIE_NAME  = access_token
 REFRESH_TOKEN_COOKIE_NAME  = refresh_token
 ACCESS_TOKEN_PRIVATE_KEY = Sanjib_sourav
 REFRESH_TOKEN_PRIVATE_KEY = sourav_sanjib
+SALT_VALUE = 10
