--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-Url = "mongodb+srv://koniat:ugeLhD2hBQBHvlkp@koniatdb.ynfjwur.mongodb.net/?retryWrites=true&w=majority"
+Url = "mongodb://localhost:27017/koniat"
 JWT_SECRET = Sanjib_sourav
 JWT_REFRESH_SECRET = sourav_sanjib
 COOKIE_SECRET = Sanjib_sourav
