modified code and cahnge project structure

--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ REFRESH_TOKEN_COOKIE_NAME  = refresh_token
 ACCESS_TOKEN_PRIVATE_KEY = Sanjib_sourav
 REFRESH_TOKEN_PRIVATE_KEY = sourav_sanjib
 SALT_VALUE = 10
-NODE_ENV=production
+NODE_ENV=devsds
