change route and add middle ware

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-Url = "mongodb://localhost:27017/koniat"
+Url = "mongodb+srv://koniat:ugeLhD2hBQBHvlkp@koniatdb.ynfjwur.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET = Sanjib_sourav
 JWT_REFRESH_SECRET = sourav_sanjib
 COOKIE_SECRET = Sanjib_sourav
@@ -11,4 +11,5 @@ REFRESH_TOKEN_PRIVATE_KEY = sourav_sanjib
 SALT_VALUE = 10
 NODE_ENV=production
 FRONTEND_APP_URL = 'https://test-2f40d.firebaseapp.com'
+
 
