change file at env

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ ACCESS_TOKEN_PRIVATE_KEY = Sanjib_sourav
 REFRESH_TOKEN_PRIVATE_KEY = sourav_sanjib
 SALT_VALUE = 10
 NODE_ENV=production
-FRONTEND_APP_URL = 'https://test-2f40d.firebaseapp.com'
+FRONTEND_PRODUCTION = 'https://test-2f40d.firebaseapp.com'
+FRONTEND_DEV = 'http://localhost:4200/admin'
 
 
