--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
     "swagger-ui-express": "^4.5.0",
