--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ REFRESH_TOKEN_COOKIE_NAME  = refresh_token
 ACCESS_TOKEN_PRIVATE_KEY = Sanjib_sourav
 REFRESH_TOKEN_PRIVATE_KEY = sourav_sanjib
 SALT_VALUE = 10
-NODE_ENV=production
+NODE_ENV=dev
 FRONTEND_PRODUCTION = 'https://test-2f40d.firebaseapp.com'
 FRONTEND_DEV = 'http://localhost:4200/admin'
 
