--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
     "swagger-ui-express": "^4.5.0",
+    "talisman": "^1.1.4",
     "yamljs": "^0.3.0"
   }
 }
